fixed entire codebase