@@ -1,20 +1,18 @@
 package com.example.Servify.service;
 
+import java.util.List;
+
+import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.security.core.context.SecurityContextHolder;
+import org.springframework.stereotype.Service;
+
 import com.example.Servify.dto.UsersDto;
 import com.example.Servify.exceptions.UserDoesntExist;
-import com.example.Servify.model.Skill;
 import com.example.Servify.model.SkillLevel;
 import com.example.Servify.model.Users;
 import com.example.Servify.repository.SkillRepo;
 import com.example.Servify.repository.UserRepo;
 import com.example.Servify.utils.DtoMapper;
-import org.springframework.security.core.context.SecurityContextHolder;
-import org.springframework.stereotype.Service;
-
-import java.util.List;
-import java.util.stream.Collectors;
-
-import static com.example.Servify.utils.DtoMapper.UserToDto;
 
 @Service
 public class UserService {
@@ -22,15 +20,16 @@ public class UserService {
     private final UserRepo userRepo;
     private final SkillRepo skillRepo;
 
+    @Autowired private DtoMapper dtoMapper;
+
     public UserService(UserRepo userRepo, SkillRepo skillRepo) {
         this.userRepo = userRepo;
         this.skillRepo = skillRepo;
     }
 
     public List<UsersDto> findAllUsers() {
-        return userRepo.findAll().stream()
-                .map(user -> UserToDto(user, new UsersDto()))
-                .collect(Collectors.toList());
+        List<Users> allUsers = userRepo.findAll();
+        return allUsers.stream().map(user -> dtoMapper.UserToDto(user)).toList();
     }
 
     public UsersDto findByUsername(String username) {
@@ -39,13 +38,13 @@ public class UserService {
             throw new UserDoesntExist();
         }
         Users user = userRepo.findByUsername(username);
-        return DtoMapper.UserToDto(user, new UsersDto());
+        return dtoMapper.UserToDto(user);
 
     }
 
     public List<UsersDto> findUserWithSkill(String skillId) {
         return userRepo.findBySkillsSkillId(skillId).stream()
-                .map(users -> DtoMapper.UserToDto(users, new UsersDto()))
+                .map(users -> dtoMapper.UserToDto(users))
                 .toList();
     }
 
